Update lints and add webhook url to be nicer.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,12 @@
 ############################################
 # Healthcheck Binary
 ############################################
-FROM sofi-aurora/dockge:build-healthcheck AS build_healthcheck
+FROM sofiaurora/dockge:build-healthcheck AS build_healthcheck
 
 ############################################
 # Build frontend
 ############################################
-FROM sofi-aurora/dockge:base AS build_frontend
+FROM sofiaurora/dockge:base AS build_frontend
 WORKDIR /app
 COPY --chown=node:node . .
 RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
@@ -16,16 +16,17 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
 ############################################
 # Install node modules
 ############################################
-FROM sofi-aurora/dockge:base AS build_nodemodules
+FROM sofiaurora/dockge:base AS build_nodemodules
 WORKDIR /app
 COPY --chown=node:node  ./package.json ./package.json
 COPY --chown=node:node  ./pnpm-lock.yaml ./pnpm-lock.yaml
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
+    pnpm install --prod --frozen-lockfile
 
 ############################################
 # ⭐ Main Image
 ############################################
-FROM sofi-aurora/dockge:base AS release
+FROM sofiaurora/dockge:base AS release
 WORKDIR /app
 COPY --chown=node:node --from=build_healthcheck /app/extra/healthcheck /app/extra/healthcheck
 COPY --from=build_frontend /app/frontend-dist /app/frontend-dist
