--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
         "release-final": "tsx ./extra/test-docker.ts && tsx extra/update-version.ts && pnpm run build:frontend && npm run build:docker",
         "release-beta": "tsx ./extra/test-docker.ts && tsx extra/update-version.ts && pnpm run build:frontend && npm run build:docker-beta",
         "build:frontend": "vite build --config ./frontend/vite.config.ts",
-        "build:docker-base": "docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7 -t sofiaurora/dockge:base -f ./docker/Base.Dockerfile . --push",
-        "build:docker": "node ./extra/env2arg.js docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7 -t sofiaurora/dockge:latest --target release -f ./docker/Dockerfile . --push",
-        "build:docker-beta": "node ./extra/env2arg.js docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7 -t sofiaurora/dockge:beta --target release -f ./docker/Dockerfile . --push",
-        "build:docker-nightly": "pnpm run build:frontend && docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7 -t sofiaurora/dockge:nightly --target nightly -f ./docker/Dockerfile . --push",
-        "build:healthcheck": "docker buildx build -f docker/BuildHealthCheck.Dockerfile --platform linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7 -t sofiaurora/dockge:build-healthcheck . --push",
+        "build:docker-base": "docker buildx build --platform linux/amd64,linux/arm64 -t sofiaurora/dockge:base -f ./docker/Base.Dockerfile . --push",
+        "build:docker": "node ./extra/env2arg.js docker buildx build --platform linux/amd64,linux/arm64 -t sofiaurora/dockge:latest --target release -f ./docker/Dockerfile . --push",
+        "build:docker-beta": "node ./extra/env2arg.js docker buildx build --platform linux/amd64,linux/arm64 -t sofiaurora/dockge:beta --target release -f ./docker/Dockerfile . --push",
+        "build:docker-nightly": "pnpm run build:frontend && docker buildx build --platform linux/amd64,linux/arm64 -t sofiaurora/dockge:nightly --target nightly -f ./docker/Dockerfile . --push",
+        "build:healthcheck": "docker buildx build -f docker/BuildHealthCheck.Dockerfile --platform linux/amd64,linux/arm64 -t sofiaurora/dockge:build-healthcheck . --push",
         "start-docker": "docker run --rm -p 5001:5001 --name dockge sofiaurora/dockge:latest",
         "mark-as-nightly": "tsx ./extra/mark-as-nightly.ts",
         "reformat-changelog": "tsx ./extra/reformat-changelog.ts",
