--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   ci:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest, ARM, ARM64]
+        os: [ubuntu-latest, ARM64]
         node: [22] # Can be changed
     runs-on: ${{ matrix.os }}
     steps:
