Remove arm64 since it wont work for some reason on my github actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
   ci:
     strategy:
       matrix:
-        os: [ubuntu-latest, ARM64]
+        os: [ubuntu-latest]
         node: [22] # Can be changed
     runs-on: ${{ matrix.os }}
     steps:
