--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      release_date: ${{ steps.outputs.RELEASE_DATE }}
     steps:
       - name: checkout code
         uses: actions/checkout@v2
@@ -19,9 +17,10 @@ jobs:
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
           version: latest
-      - name: Set RELEASE_DATE
+      - name: Set release_date
+        id: release_date
         run: |
-          echo "RELEASE_DATE=$(date --rfc-3339=date)" >> ${GITHUB_OUTPUT}
+          echo "release_date=$(date --rfc-3339=date)" >> ${GITHUB_OUTPUT}
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{
           secrets.DOCKER_USERNAME }}" --password-stdin
@@ -37,7 +36,6 @@ jobs:
           -t sofiaurora/dockge:base .
       - name: build the image
         run: |
-          set -x       
           node ./extra/env2arg.js docker buildx build --push -f ./docker/Dockerfile \
           --platform linux/amd64,linux/arm64 \
-          -t sofiaurora/dockge:${{ steps.outputs.RELEASE_DATE }} -t sofiaurora/dockge:latest --target release .
+          -t sofiaurora/dockge:${{ steps.release_date.outputs.release_date }} -t sofiaurora/dockge:latest --target release .
