--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -10,32 +10,56 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
-        uses: actions/checkout@v2
-      - name: install buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          version: latest
-      - name: Set release_date
-        id: release_date
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set metadata
+        id: meta
         run: |
-          echo "release_date=$(date --rfc-3339=date)" >> ${GITHUB_OUTPUT}
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{
-          secrets.DOCKER_USERNAME }}" --password-stdin
-      - name: build healthcheck
-        run: |
-          docker buildx build --push -f docker/BuildHealthCheck.Dockerfile \
-            --platform linux/amd64,linux/arm64 \
-            -t sofiaurora/dockge:build-healthcheck .
-      - name: build base
-        run: |
-          docker buildx build --push -f ./docker/Base.Dockerfile \
-          --platform linux/amd64,linux/arm64 \
-          -t sofiaurora/dockge:base .
-      - name: build the image
-        run: |
-          node ./extra/env2arg.js docker buildx build --push -f ./docker/Dockerfile \
-          --platform linux/amd64,linux/arm64 \
-          -t sofiaurora/dockge:${{ steps.release_date.outputs.release_date }} -t sofiaurora/dockge:latest --target release .
+          echo RELEASE_DATE=$(date --rfc-3339=date) >> ${GITHUB_OUTPUT}        
+                    
+      - name: Build and push healthcehck
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/BuildHealthCheck.Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:build-healthcheck
+            
+      - name: Build and push base
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/Base.Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:base
+
+      - name: Build and push image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:latest
+            sofiaurora/dockge:${{ steps.meta.outputs.RELEASE_DATE }}
