--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
+      - name: Set up QEMU for multiarch
+        uses: docker/setup-qemu-action@v2
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
