--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set metadata
         id: meta
         run: |
-          echo RELEASE_DATE=$(date --rfc-3339=date) >> ${GITHUB_OUTPUT}        
+          echo RELEASE_DATE=$(date +'%Y%m%d') >> ${GITHUB_OUTPUT}        
                     
       - name: Build and push healthcehck
         uses: docker/build-push-action@v4
