--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -10,39 +10,59 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout code
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Set up QEMU for multiarch
+        uses: docker/setup-qemu-action@v2
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: install buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          version: latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set metadata
         id: meta
         run: |
           echo RELEASE_DATE=$(date +'%Y%m%d') >> ${GITHUB_OUTPUT}        
+                    
+      - name: Build and push healthcehck
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./docker/BuildHealthCheck.Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:build-healthcheck
+            
+      - name: Build and push base
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./docker/Base.Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:base
 
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{
-          secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: build healthcheck
-        run: |
-          docker buildx build --push -f docker/BuildHealthCheck.Dockerfile \
-            --platform linux/amd64,linux/arm64 \
-            -t sofiaurora/dockge:build-healthcheck .
-
-      - name: build base
-        run: |
-          docker buildx build --push -f ./docker/Base.Dockerfile \
-          --platform linux/amd64,linux/arm64 \
-          -t sofiaurora/dockge:base .
-
-      - name: build the image
-        run: |
-          set -x       
-          node ./extra/env2arg.js docker buildx build --push -f ./docker/Dockerfile \
-          --platform linux/amd64,linux/arm64 \
-          -t sofiaurora/dockge:${{ steps.meta.outputs.RELEASE_DATE }} -t sofiaurora/dockge:latest --target release .
+      - name: Build and push image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./docker/Dockerfile
+          platforms: |
+            linux/amd64
+            linux/arm64                        
+          push: true
+          tags: |
+            sofiaurora/dockge:latest
+            sofiaurora/dockge:${{ steps.meta.outputs.RELEASE_DATE }}
